--- a/blqw.SIF/blqw.SIF.csproj
+++ b/blqw.SIF/blqw.SIF.csproj
@@ -37,15 +37,19 @@
     <!-- A reference to the entire .NET Framework is automatically included -->
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ApiException.cs" />
     <Compile Include="Container.cs" />
     <Compile Include="Descriptor\ApiDescriptor.cs" />
+    <Compile Include="Descriptor\ApiParameterDescriptor.cs" />
     <Compile Include="IApiRequest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ApiAttribute.cs" />
     <Compile Include="Services\IApiSelector.cs" />
     <Compile Include="Services\IApiSettingParser.cs" />
+    <Compile Include="Services\IConverter.cs" />
     <Compile Include="Services\IService.cs" />
     <Compile Include="Services\ServiceCollection.cs" />
+    <Compile Include="Validation\ValidationAttribute.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
