--- a/blqw.SIF.Core/blqw.SIF.Core.csproj
+++ b/blqw.SIF.Core/blqw.SIF.Core.csproj
@@ -1,15 +1,14 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="14.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <MinimumVisualStudioVersion>10.0</MinimumVisualStudioVersion>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{A54DF45F-52A2-4785-8E91-F80BE0556285}</ProjectGuid>
+    <ProjectGuid>{5B066124-FAB8-435E-A86B-7E4D5B270650}</ProjectGuid>
     <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>blqw.SIF</RootNamespace>
-    <AssemblyName>blqw.SIF</AssemblyName>
+    <AssemblyName>blqw.SIF.Core</AssemblyName>
     <DefaultLanguage>zh-CN</DefaultLanguage>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{786C830F-07A1-408B-BD7F-6EE04809D6DB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
@@ -35,34 +34,11 @@
   </PropertyGroup>
   <ItemGroup>
     <!-- A reference to the entire .NET Framework is automatically included -->
-    <ProjectReference Include="..\blqw.SIF.Core\blqw.SIF.Core.csproj">
-      <Project>{5b066124-fab8-435e-a86b-7e4d5b270650}</Project>
-      <Name>blqw.SIF.Core</Name>
-    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ApiCollection.cs" />
-    <Compile Include="Container.cs" />
-    <Compile Include="Descriptor\ApiDescriptor.cs" />
-    <Compile Include="Descriptor\ApiParameterDescriptor.cs" />
-    <Compile Include="Descriptor\NamespaceDescriptor.cs" />
-    <Compile Include="Descriptor\TypeDescriptor.cs" />
-    <Compile Include="IApiRequest.cs" />
+    <Compile Include="ApiAttribute.cs" />
+    <Compile Include="ApiException.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ServiceProvider.cs" />
-    <Compile Include="Services\IApiSelector.cs" />
-    <Compile Include="Services\IApiSettingParser.cs" />
-    <Compile Include="Services\IConverter.cs" />
-    <Compile Include="Services\IService.cs" />
-    <Compile Include="Services\ServiceCollection.cs" />
-    <Compile Include="Validation\ValidationAttribute.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
-  <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
-       Other similar extension points exist, see Microsoft.Common.targets.
-  <Target Name="BeforeBuild">
-  </Target>
-  <Target Name="AfterBuild">
-  </Target>
-  -->
 </Project>
