--- a/blqw.SIF.Core/blqw.SIF.Core.csproj
+++ b/blqw.SIF.Core/blqw.SIF.Core.csproj
@@ -37,8 +37,13 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ApiAttribute.cs" />
+    <Compile Include="ApiClassAttribute.cs" />
     <Compile Include="ApiException.cs" />
+    <Compile Include="ApiPropertyAttribute.cs" />
+    <Compile Include="IApiAttribute.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Validation\ValidationAttribute.cs" />
+    <Compile Include="Validation\Validator.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
 </Project>
