--- a/blqw.SIF/blqw.SIF.csproj
+++ b/blqw.SIF/blqw.SIF.csproj
@@ -47,15 +47,13 @@
     <Compile Include="Descriptor\ApiParameterDescriptor.cs" />
     <Compile Include="Descriptor\NamespaceDescriptor.cs" />
     <Compile Include="Descriptor\TypeDescriptor.cs" />
-    <Compile Include="IApiRequest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ServiceProvider.cs" />
-    <Compile Include="Services\IApiSelector.cs" />
     <Compile Include="Services\IApiSettingParser.cs" />
+    <Compile Include="Services\IApiDataGetter.cs" />
     <Compile Include="Services\IConverter.cs" />
     <Compile Include="Services\IService.cs" />
     <Compile Include="Services\ServiceCollection.cs" />
-    <Compile Include="Validation\ValidationAttribute.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
