--- a/blqw.SIF/blqw.SIF.csproj
+++ b/blqw.SIF/blqw.SIF.csproj
@@ -45,12 +45,13 @@
     <Compile Include="Container.cs" />
     <Compile Include="Descriptor\ApiDescriptor.cs" />
     <Compile Include="Descriptor\ApiParameterDescriptor.cs" />
+    <Compile Include="Descriptor\ApiPropertyDescriptor.cs" />
     <Compile Include="Descriptor\NamespaceDescriptor.cs" />
-    <Compile Include="Descriptor\TypeDescriptor.cs" />
+    <Compile Include="Descriptor\ApiClassDescriptor.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ServiceProvider.cs" />
     <Compile Include="Services\IApiSettingParser.cs" />
-    <Compile Include="Services\IApiDataGetter.cs" />
+    <Compile Include="Services\IApiDataProvider.cs" />
     <Compile Include="Services\IConverter.cs" />
     <Compile Include="Services\IService.cs" />
     <Compile Include="Services\ServiceCollection.cs" />
