--- a/blqw.SIF.Core/blqw.SIF.Core.csproj
+++ b/blqw.SIF.Core/blqw.SIF.Core.csproj
@@ -36,10 +36,10 @@
     <!-- A reference to the entire .NET Framework is automatically included -->
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ApiAttribute.cs" />
-    <Compile Include="ApiClassAttribute.cs" />
+    <Compile Include="Attributes\ApiAttribute.cs" />
+    <Compile Include="Attributes\ApiClassAttribute.cs" />
     <Compile Include="ApiException.cs" />
-    <Compile Include="ApiPropertyAttribute.cs" />
+    <Compile Include="Attributes\ApiPropertyAttribute.cs" />
     <Compile Include="IApiAttribute.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Validation\ValidationAttribute.cs" />
