--- a/blqw.SIF.Owin/packages.config
+++ b/blqw.SIF.Owin/packages.config
@@ -1,5 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="blqw.Convert3" version="3.0.4.1" targetFramework="net45" />
+  <package id="blqw.IOC" version="1.3.6" targetFramework="net45" />
+  <package id="blqw.Json" version="3.1.3.1" targetFramework="net45" />
   <package id="Microsoft.Owin" version="3.0.1" targetFramework="net45" />
   <package id="Microsoft.Owin.Host.HttpListener" version="3.0.1" targetFramework="net45" />
   <package id="Microsoft.Owin.Host.HttpListener.zh-Hans" version="3.0.1" targetFramework="net45" />
