--- a/blqw.SIF/blqw.SIF.csproj
+++ b/blqw.SIF/blqw.SIF.csproj
@@ -50,6 +50,7 @@
     <Compile Include="Descriptor\ApiClassDescriptor.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ServiceProvider.cs" />
+    <Compile Include="ApiData.cs" />
     <Compile Include="Services\IApiSettingParser.cs" />
     <Compile Include="Services\IApiDataProvider.cs" />
     <Compile Include="Services\IConverter.cs" />
