--- a/OwinHost/OwinHost.csproj
+++ b/OwinHost/OwinHost.csproj
@@ -59,11 +59,16 @@
   <ItemGroup>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SampleMiddleware.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\blqw.SIF.Owin\blqw.SIF.Owin.csproj">
+      <Project>{0d03b13d-f385-4d11-bdc8-cedc2f74b4c8}</Project>
+      <Name>blqw.SIF.Owin</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
