--- a/blqw.SIF/blqw.SIF.csproj
+++ b/blqw.SIF/blqw.SIF.csproj
@@ -2,7 +2,7 @@
 <Project ToolsVersion="14.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
-    <MinimumVisualStudioVersion>10.0</MinimumVisualStudioVersion>
+    <MinimumVisualStudioVersion>11.0</MinimumVisualStudioVersion>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{A54DF45F-52A2-4785-8E91-F80BE0556285}</ProjectGuid>
@@ -13,8 +13,8 @@
     <DefaultLanguage>zh-CN</DefaultLanguage>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{786C830F-07A1-408B-BD7F-6EE04809D6DB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
-    <TargetFrameworkProfile>Profile344</TargetFrameworkProfile>
-    <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
+    <TargetFrameworkProfile>Profile259</TargetFrameworkProfile>
+    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -42,20 +42,21 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ApiCollection.cs" />
-    <Compile Include="Container.cs" />
+    <Compile Include="ApiSettings.cs" />
+    <Compile Include="ApiContainer.cs" />
     <Compile Include="Descriptor\ApiDescriptor.cs" />
     <Compile Include="Descriptor\ApiParameterDescriptor.cs" />
     <Compile Include="Descriptor\ApiPropertyDescriptor.cs" />
+    <Compile Include="Descriptor\IDescriptor.cs" />
     <Compile Include="Descriptor\NamespaceDescriptor.cs" />
     <Compile Include="Descriptor\ApiClassDescriptor.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ServiceProvider.cs" />
+    <Compile Include="ApiServiceProvider.cs" />
     <Compile Include="ApiData.cs" />
     <Compile Include="Services\IApiSettingParser.cs" />
     <Compile Include="Services\IApiDataProvider.cs" />
     <Compile Include="Services\IConverter.cs" />
     <Compile Include="Services\IService.cs" />
-    <Compile Include="Services\ServiceCollection.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
