--- a/OwinHost/OwinHost.csproj
+++ b/OwinHost/OwinHost.csproj
@@ -65,6 +65,10 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\BizDemo\BizDemo.csproj">
+      <Project>{46a94acc-edf2-42cc-bde1-94a376d6f3d4}</Project>
+      <Name>BizDemo</Name>
+    </ProjectReference>
     <ProjectReference Include="..\blqw.SIF.Owin\blqw.SIF.Owin.csproj">
       <Project>{0d03b13d-f385-4d11-bdc8-cedc2f74b4c8}</Project>
       <Name>blqw.SIF.Owin</Name>
