--- a/blqw.SIF.Core/blqw.SIF.Core.csproj
+++ b/blqw.SIF.Core/blqw.SIF.Core.csproj
@@ -33,19 +33,18 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <!-- A reference to the entire .NET Framework is automatically included -->
-    <None Include="project.json" />
-  </ItemGroup>
-  <ItemGroup>
-    <Compile Include="Attributes\ApiAttribute.cs" />
-    <Compile Include="Attributes\ApiClassAttribute.cs" />
+    <Compile Include="Api\ApiAttribute.cs" />
+    <Compile Include="Api\ApiClassAttribute.cs" />
     <Compile Include="ApiException.cs" />
-    <Compile Include="Attributes\ApiParameterAttribute.cs" />
-    <Compile Include="Attributes\ApiPropertyAttribute.cs" />
-    <Compile Include="IApiAttribute.cs" />
+    <Compile Include="Api\ApiParameterAttribute.cs" />
+    <Compile Include="Api\ApiPropertyAttribute.cs" />
+    <Compile Include="Filters\ApiFilterAttribute.cs" />
+    <Compile Include="Api\IApiAttribute.cs" />
+    <Compile Include="Filters\FilterArgs.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Validation\ValidationAttribute.cs" />
     <Compile Include="Validation\Validator.cs" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
 </Project>
