* 删除`ApiSetting`类,改为使用拓展方法提供字典操作的支持 * 增加过滤器`ApiFilterAttribute` * 增加数据更改器`DataModification` * 增加Api调用上下文`ApiCallContext` * 增加Api全局操作`ApiGlobal`

--- a/blqw.SIF.Core/blqw.SIF.Core.csproj
+++ b/blqw.SIF.Core/blqw.SIF.Core.csproj
@@ -33,16 +33,19 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="ApiCallContext.cs" />
+    <Compile Include="ApiGlobal.cs" />
     <Compile Include="Api\ApiAttribute.cs" />
     <Compile Include="Api\ApiClassAttribute.cs" />
     <Compile Include="ApiException.cs" />
     <Compile Include="Api\ApiParameterAttribute.cs" />
     <Compile Include="Api\ApiPropertyAttribute.cs" />
+    <Compile Include="DataModification\DataModificationAttribute.cs" />
     <Compile Include="Filters\ApiFilterAttribute.cs" />
     <Compile Include="Api\IApiAttribute.cs" />
     <Compile Include="Filters\FilterArgs.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Validation\ValidationAttribute.cs" />
+    <Compile Include="Validation\DataValidationAttribute.cs" />
     <Compile Include="Validation\Validator.cs" />
   </ItemGroup>
   <ItemGroup />
