--- a/blqw.SIF/blqw.SIF.csproj
+++ b/blqw.SIF/blqw.SIF.csproj
@@ -41,9 +41,9 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ApiCollection.cs" />
+    <Compile Include="Components\ApiCollection.cs" />
     <Compile Include="ApiContainer.cs" />
-    <Compile Include="ApiGlobalProxy.cs" />
+    <Compile Include="Components\ApiGlobalProxy.cs" />
     <Compile Include="Descriptor\ApiDescriptor.cs" />
     <Compile Include="Descriptor\ApiParameterDescriptor.cs" />
     <Compile Include="Descriptor\ApiPropertyDescriptor.cs" />
@@ -52,8 +52,8 @@
     <Compile Include="Descriptor\NamespaceDescriptor.cs" />
     <Compile Include="Descriptor\ApiClassDescriptor.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="IApiContainerServices.cs" />
-    <Compile Include="ApiData.cs" />
+    <Compile Include="Components\IApiContainerServices.cs" />
+    <Compile Include="Components\ApiData.cs" />
     <Compile Include="Services\IApiSettingParser.cs" />
     <Compile Include="Services\IApiDataProvider.cs" />
     <Compile Include="Services\IConverter.cs" />
