--- a/blqw.SIF.Core/blqw.SIF.Core.csproj
+++ b/blqw.SIF.Core/blqw.SIF.Core.csproj
@@ -48,6 +48,7 @@
     <Compile Include="ResultProvider\IResultProvider.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ResultProvider\ResultProvider.cs" />
+    <Compile Include="AttributeCache.cs" />
     <Compile Include="SafeStringDictionary.cs" />
     <Compile Include="Validation\DataValidationAttribute.cs" />
     <Compile Include="Validation\Validator.cs" />
