## [0.0.6] 2016.12.11 * 优化验证器验证部分代码 * 增加数据变更器调用实现

--- a/blqw.SIF.Core/blqw.SIF.Core.csproj
+++ b/blqw.SIF.Core/blqw.SIF.Core.csproj
@@ -42,6 +42,7 @@
     <Compile Include="Api\ApiPropertyAttribute.cs" />
     <Compile Include="DataModification\DataModificationAttribute.cs" />
     <Compile Include="DataModification\Modifier.cs" />
+    <Compile Include="DataModification\TrimAttribute.cs" />
     <Compile Include="Filters\ApiFilterAttribute.cs" />
     <Compile Include="Api\IApiAttribute.cs" />
     <Compile Include="Filters\FilterArgs.cs" />
