--- a/OwinHost/App.config
+++ b/OwinHost/App.config
@@ -3,4 +3,10 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
     </startup>
+
+  <system.diagnostics>
+    <switches>
+      <add name="blqw.IOC" value="0"/>
+    </switches>
+  </system.diagnostics>
 </configuration>
