--- a/OwinHost/OwinHost.csproj
+++ b/OwinHost/OwinHost.csproj
@@ -69,9 +69,9 @@
       <Project>{46a94acc-edf2-42cc-bde1-94a376d6f3d4}</Project>
       <Name>BizDemo</Name>
     </ProjectReference>
-    <ProjectReference Include="..\blqw.SIF.Owin\blqw.SIF.Owin.csproj">
+    <ProjectReference Include="..\blqw.SIF.Owin\blqw.SIF.OwinAdapter.csproj">
       <Project>{0d03b13d-f385-4d11-bdc8-cedc2f74b4c8}</Project>
-      <Name>blqw.SIF.Owin</Name>
+      <Name>blqw.SIF.OwinAdapter</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
