--- a/blqw.SIF/blqw.SIF.Container.csproj
+++ b/blqw.SIF/blqw.SIF.Container.csproj
@@ -9,7 +9,7 @@
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>blqw.SIF</RootNamespace>
-    <AssemblyName>blqw.SIF</AssemblyName>
+    <AssemblyName>blqw.SIF.Container</AssemblyName>
     <DefaultLanguage>zh-CN</DefaultLanguage>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{786C830F-07A1-408B-BD7F-6EE04809D6DB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
