--- a/blqw.UIF.Core/blqw.UIF.Core.csproj
+++ b/blqw.UIF.Core/blqw.UIF.Core.csproj
@@ -7,8 +7,8 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{5B066124-FAB8-435E-A86B-7E4D5B270650}</ProjectGuid>
     <OutputType>Library</OutputType>
-    <RootNamespace>blqw.SIF</RootNamespace>
-    <AssemblyName>blqw.SIF.Core</AssemblyName>
+    <RootNamespace>blqw.UIF</RootNamespace>
+    <AssemblyName>blqw.UIF.Core</AssemblyName>
     <DefaultLanguage>zh-CN</DefaultLanguage>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{786C830F-07A1-408B-BD7F-6EE04809D6DB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
@@ -34,6 +34,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="ApiCallContext.cs" />
+    <Compile Include="ApiExceptions.cs" />
     <Compile Include="ApiGlobal.cs" />
     <Compile Include="Api\ApiAttribute.cs" />
     <Compile Include="Api\ApiClassAttribute.cs" />
@@ -50,9 +51,12 @@
     <Compile Include="Filters\FilterArgs.cs" />
     <Compile Include="ResultProvider\IResultProvider.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ResultProvider\IResultUpdater.cs" />
     <Compile Include="ResultProvider\ResultProvider.cs" />
+    <Compile Include="Session\ISession.cs" />
+    <Compile Include="Session\ISupportSession.cs" />
     <Compile Include="Tools\AttributeCache.cs" />
-    <Compile Include="Tools\SimplyMap.cs" />
+    <Compile Include="Tools\ReadOnlyCache.cs" />
     <Compile Include="Tools\NameDictionary.cs" />
     <Compile Include="Validation\AllowScriptAttribute.cs" />
     <Compile Include="Validation\CountAttribute.cs" />
@@ -67,6 +71,9 @@
     <Compile Include="Validation\RequiredAttribute.cs" />
     <Compile Include="Validation\StringLengthAttribute.cs" />
     <Compile Include="Validation\Validator.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
 </Project>
