--- a/blqw.UIF/blqw.UIF.Container.csproj
+++ b/blqw.UIF/blqw.UIF.Container.csproj
@@ -8,8 +8,8 @@
     <ProjectGuid>{A54DF45F-52A2-4785-8E91-F80BE0556285}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>blqw.SIF</RootNamespace>
-    <AssemblyName>blqw.SIF.Container</AssemblyName>
+    <RootNamespace>blqw.UIF</RootNamespace>
+    <AssemblyName>blqw.UIF.Container</AssemblyName>
     <DefaultLanguage>zh-CN</DefaultLanguage>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{786C830F-07A1-408B-BD7F-6EE04809D6DB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
@@ -51,7 +51,7 @@
     <Compile Include="Descriptor\NamespaceDescriptor.cs" />
     <Compile Include="Descriptor\ApiClassDescriptor.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Components\IApiContainerServices.cs" />
+    <Compile Include="Services\IApiContainerProvider.cs" />
     <Compile Include="Components\ApiData.cs" />
     <Compile Include="Services\IApiSettingParser.cs" />
     <Compile Include="Services\IApiDataProvider.cs" />
