## [0.0.13] 2016.12.22 * 事件支持设计完成 * 部分事件已支持

--- a/blqw.MIS.Core/blqw.MIS.Core.csproj
+++ b/blqw.MIS.Core/blqw.MIS.Core.csproj
@@ -34,6 +34,8 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="ApiCallContext.cs" />
+    <Compile Include="Events\ApiEventArgs.cs" />
+    <Compile Include="Events\ApiEventBinds.cs" />
     <Compile Include="ApiExceptions.cs" />
     <Compile Include="ApiGlobal.cs" />
     <Compile Include="Api\ApiAttribute.cs" />
