--- a/blqw.MIS/blqw.MIS.Container.csproj
+++ b/blqw.MIS/blqw.MIS.Container.csproj
@@ -51,6 +51,7 @@
     <Compile Include="Descriptor\NamespaceDescriptor.cs" />
     <Compile Include="Descriptor\ApiClassDescriptor.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\EventCaller.cs" />
     <Compile Include="Services\IApiContainerProvider.cs" />
     <Compile Include="Components\ApiData.cs" />
     <Compile Include="Services\IApiSettingParser.cs" />
