--- a/blqw.MIS.UnitTestAdapter/blqw.MIS.UnitTestAdapter.csproj
+++ b/blqw.MIS.UnitTestAdapter/blqw.MIS.UnitTestAdapter.csproj
@@ -57,7 +57,7 @@
       <Project>{5b066124-fab8-435e-a86b-7e4d5b270650}</Project>
       <Name>blqw.MIS.Core</Name>
     </ProjectReference>
-    <ProjectReference Include="..\blqw.MIS\blqw.MIS.Container.csproj">
+    <ProjectReference Include="..\blqw.MIS.Container\blqw.MIS.Container.csproj">
       <Project>{a54df45f-52a2-4785-8e91-f80be0556285}</Project>
       <Name>blqw.MIS.Container</Name>
     </ProjectReference>
