--- a/blqw.MIS/blqw.MIS.csproj
+++ b/blqw.MIS/blqw.MIS.csproj
@@ -36,6 +36,8 @@
     <!-- A reference to the entire .NET Framework is automatically included -->
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ApiArgument.cs" />
+    <Compile Include="ApiProperty.cs" />
     <Compile Include="Api\ApiAttribute.cs" />
     <Compile Include="Api\ApiClassAttribute.cs" />
     <Compile Include="Api\ApiParameterAttribute.cs" />
