--- a/BizDemo/BizDemo.csproj
+++ b/BizDemo/BizDemo.csproj
@@ -49,6 +49,7 @@
   <ItemGroup>
     <Compile Include="Global.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Test.cs" />
     <Compile Include="User.cs" />
   </ItemGroup>
   <ItemGroup>
