--- a/blqw.MIS.UnitTest/blqw.MIS.UnitTest.csproj
+++ b/blqw.MIS.UnitTest/blqw.MIS.UnitTest.csproj
@@ -41,6 +41,16 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\Request.cs" />
+    <Compile Include="Services\Resolver.cs" />
+    <Compile Include="Services\Response.cs" />
+    <Compile Include="Services\Selector.cs" />
+    <Compile Include="Services\ServiceEntry.cs" />
+    <Compile Include="Tools\ExportedTypes.cs" />
+    <Compile Include="Tools\ExpressionParser.cs" />
+    <Compile Include="Tools\NameDictionary.cs" />
+    <Compile Include="UnitTestManager.cs" />
+    <Compile Include="UnitTestResult.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\blqw.MIS.Abstract\blqw.MIS.Abstract.csproj">
