--- a/blqw.MIS.MVC/blqw.MIS.MVC.csproj
+++ b/blqw.MIS.MVC/blqw.MIS.MVC.csproj
@@ -4,13 +4,14 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{D01A38C1-35E5-4A40-8C50-F6B1CEE2AC9D}</ProjectGuid>
+    <ProjectGuid>{77F693A5-0D3E-4DFE-B92A-DDE6FB4CE974}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>blqw.MIS.UnitTestAdapter</RootNamespace>
-    <AssemblyName>blqw.MIS.UnitTestAdapter</AssemblyName>
-    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
+    <RootNamespace>blqw.MIS.MVC</RootNamespace>
+    <AssemblyName>blqw.MIS.MVC</AssemblyName>
+    <TargetFrameworkVersion>v4.6</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -30,8 +31,18 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="blqw.Convert3, Version=3.0.5.3, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\blqw.Convert3.3.0.5.3\lib\net45\blqw.Convert3.dll</HintPath>
+    </Reference>
+    <Reference Include="blqw.IOC, Version=1.3.8.6, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\blqw.IOC.1.3.8.6\lib\net45\blqw.IOC.dll</HintPath>
+    </Reference>
+    <Reference Include="blqw.Json, Version=3.1.3.4, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\blqw.Json.3.1.3.4\lib\net45\blqw.Json.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Web" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -40,26 +51,31 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DataProvider.cs" />
-    <Compile Include="ExpressionParser.cs" />
-    <Compile Include="ParseResult.cs" />
+    <Compile Include="MISRoute.cs" />
+    <Compile Include="HttpRouteHandler.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="UnitTest.cs" />
-    <Compile Include="UnitTestProvider.cs" />
-    <Compile Include="UnitTestResult.cs" />
+    <Compile Include="Services\Request.cs" />
+    <Compile Include="Services\RequestSetter.cs" />
+    <Compile Include="Services\Resolver.cs" />
+    <Compile Include="Services\Response.cs" />
+    <Compile Include="Services\Selector.cs" />
+    <Compile Include="Services\ServiceEntry.cs" />
+    <Compile Include="Tools\ExportedTypes.cs" />
+    <Compile Include="Tools\NameDictionary.cs" />
+    <Compile Include="Tools\StringBuilderPool.cs" />
+    <Compile Include="Tools\ToolExtensions.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\blqw.MIS.Container.NetFramework45\blqw.MIS.Container.NetFramework45.csproj">
-      <Project>{008058b2-cfda-4f78-9532-017f1c85b7f9}</Project>
-      <Name>blqw.MIS.Container.NetFramework45</Name>
+    <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\blqw.MIS.Abstract\blqw.MIS.Abstract.csproj">
+      <Project>{731eba63-a20e-4e73-a350-3a04bf8675a5}</Project>
+      <Name>blqw.MIS.Abstract</Name>
     </ProjectReference>
-    <ProjectReference Include="..\blqw.MIS.Core\blqw.MIS.Core.csproj">
-      <Project>{5b066124-fab8-435e-a86b-7e4d5b270650}</Project>
-      <Name>blqw.MIS.Core</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\blqw.MIS.Container\blqw.MIS.Container.csproj">
-      <Project>{a54df45f-52a2-4785-8e91-f80be0556285}</Project>
-      <Name>blqw.MIS.Container</Name>
+    <ProjectReference Include="..\blqw.MIS\blqw.MIS.csproj">
+      <Project>{1a953b40-4f0a-48c3-84e6-de5e061f8391}</Project>
+      <Name>blqw.MIS</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
