优化代码结构

--- a/blqw.MIS.Filter/blqw.MIS.Filter.csproj
+++ b/blqw.MIS.Filter/blqw.MIS.Filter.csproj
@@ -2,15 +2,18 @@
 <Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
+    <MinimumVisualStudioVersion>11.0</MinimumVisualStudioVersion>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{556697D6-306B-4B9F-96C6-72F4B3ECE298}</ProjectGuid>
+    <ProjectGuid>{658F19DB-B7DF-488B-8D3C-555D74E02D84}</ProjectGuid>
     <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>blqw.MIS.UnitTest</RootNamespace>
-    <AssemblyName>blqw.MIS.UnitTest</AssemblyName>
-    <TargetFrameworkVersion>v4.6</TargetFrameworkVersion>
+    <RootNamespace>blqw.MIS</RootNamespace>
+    <AssemblyName>blqw.MIS.Filter</AssemblyName>
+    <DefaultLanguage>zh-CN</DefaultLanguage>
     <FileAlignment>512</FileAlignment>
+    <ProjectTypeGuids>{786C830F-07A1-408B-BD7F-6EE04809D6DB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
+    <TargetFrameworkProfile>Profile75</TargetFrameworkProfile>
+    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -30,32 +33,11 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="System" />
-    <Reference Include="System.Core" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="Microsoft.CSharp" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Net.Http" />
-    <Reference Include="System.Xml" />
+    <!-- A reference to the entire .NET Framework is automatically included -->
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="IFilter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Services\Request.cs" />
-    <Compile Include="Services\Resolver.cs" />
-    <Compile Include="Services\Selector.cs" />
-    <Compile Include="Services\ServiceEntry.cs" />
-    <Compile Include="Tools\ExportedTypes.cs" />
-    <Compile Include="Tools\ExpressionParser.cs" />
-    <Compile Include="Tools\NameDictionary.cs" />
-    <Compile Include="UnitTestManager.cs" />
-    <Compile Include="UnitTestResult.cs" />
   </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\blqw.MIS\blqw.MIS.csproj">
-      <Project>{1a953b40-4f0a-48c3-84e6-de5e061f8391}</Project>
-      <Name>blqw.MIS</Name>
-    </ProjectReference>
-  </ItemGroup>
-  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
 </Project>
