--- a/blqw.MIS.Host/blqw.MIS.Host.csproj
+++ b/blqw.MIS.Host/blqw.MIS.Host.csproj
@@ -8,7 +8,7 @@
     <ProjectGuid>{731EBA63-A20E-4E73-A350-3A04BF8675A5}</ProjectGuid>
     <OutputType>Library</OutputType>
     <RootNamespace>blqw.MIS</RootNamespace>
-    <AssemblyName>blqw.MIS.Abstract</AssemblyName>
+    <AssemblyName>blqw.MIS.Host</AssemblyName>
     <DefaultLanguage>zh-CN</DefaultLanguage>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{786C830F-07A1-408B-BD7F-6EE04809D6DB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
